<resources>
    <string name="app_name">Homework02</string>
    <string name="Delivery">Delivery</string>
    <string name="check_out">Check Out</string>
    <string name="addTopping">Add Topping</string>
    <string name="clear">Clear Pizza</string>
    <string name="yourOrder">Your Order</string>
    <string name="basePrice">Base Price : </string>
    <string name="toppings">Toppings : </string>
    <string name="deliveryCost">Delivery Cost : </string>
    <string name="totalcost">TOTAL : </string>
    <string name="finish">Finish</string>
</resources>
